# PlayerDemo

./: CMakeLists.txt  README.md
include/: about.h  ctlbar.h  customslider.h  datactl.h  globalhelper.h  mainwindow.h  medialist.h  playlist.h  show.h  title.h  videoctl.h
res/: res.qrc
res/qss/: ctrlbar.css  mainwid.css  show.css  title.css
src/: about.cpp  ctlbar.cpp  customslider.cpp  globalhelper.cpp  main.cpp  mainwindow.cpp  medialist.cpp  playlist.cpp  show.cpp  title.cpp  videoctl.cpp
